--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="main_title">AvP: The Hunt Begins</string>
     <string name="side_title">Board Game Map Creator</string>
     <string name="game_desc">Welcome to the app which creates random maps (mazes) for the board games.\n\nIt uses a couple of preconfigured tiles from the game Aliens vs Predator: The Hunt Begins, but you can use it for other games as well.\n\nThe tiles that are used in this game are:</string>
+    <string name="learn_more_button">Learn about the Hunt Begins</string>
 </resources>
